<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_amber_700"
    tools:context=".Profile">

    <TextView
        android:id="@+id/textView"
        android:layout_width="115dp"
        android:layout_height="40sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:drawableLeft="@drawable/person"
        android:gravity="center"
        android:text="@string/person"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="32dp" />

    <EditText
        android:id="@+id/Uname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView"
        android:layout_marginEnd="72dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/Age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/Uname"
        android:layout_marginTop="194dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number" />

    <RadioGroup
        android:id="@+id/radioGender"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/Uname"
        android:layout_marginBottom="176dp">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />

    </RadioGroup>


    <Button
        android:id="@+id/OkButton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="56dp"
        android:layout_marginStart="62dp"
        android:onClick="add"
        android:text="@string/add" />

    <Button
        android:id="@+id/BackButton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/OkButton"
        android:layout_marginEnd="44dp"
        android:text="@string/back" />


</RelativeLayout>