<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_amber_700"
    tools:context=".Signup">

    <TextView
        android:id="@+id/textView"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:drawableLeft="@drawable/ic_account_box_black_24dp"
        android:gravity="center"
        android:text="@string/user_registeration"
        android:textSize="27dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="32dp" />

    <EditText
        android:id="@+id/Uemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="155dp"
        android:drawableLeft="@drawable/email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/Upass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Uemail"
        android:layout_below="@+id/Uemail"
        android:layout_marginTop="36dp"
        android:drawableLeft="@drawable/lock"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/Ucpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Upass"
        android:layout_below="@+id/Upass"
        android:layout_marginTop="36dp"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:ems="10"
        android:hint="@string/cnfrm"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/Rbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Ucpass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="@drawable/buttonstyle"
        android:drawableLeft="@drawable/ic_create_black_24dp"
        android:onClick="reg"
        android:text="@string/reg" />

</RelativeLayout>