<?xml version="1.0" encoding="utf-8"?>
<FrameLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        tools:context=".MapsActivity"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:layout_marginTop="480sp"
        android:background="@color/md_amber_700">


        <Button
            android:id="@+id/Hospital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/buttonstyle"
            android:onClick="Hospitals"
            android:text="@string/hospital" />

        <Button
            android:id="@+id/ATM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="125dp"
            android:background="@drawable/buttonstyle"
            android:onClick="ATM"
            android:text="@string/atm" />

        <Button
            android:id="@+id/Restaurants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="1dp"
            android:background="@drawable/buttonstyle"
            android:onClick="Restaurants"
            android:text="@string/restaurants" />
    </RelativeLayout>


</FrameLayout>
